--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
         <div>
             <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
+                <li><a href="#">Student section</a></li>
+                <li><a href="#">Instructors</a></li>
+                <li><a href="#">Contact us</a></li>
             </ul>
         </div>
     </header>
@@ -42,7 +42,7 @@
 
     <div class="second">
         <div id="sumo">
-            Some Random Information.
+            The world is an awesome place!
         </div>
         <div class="cards">
             <div>
